songs-service/k8s/overlays/prod/image-patch.yaml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-service
spec:
  template:
    spec:
      containers:
        - name: songs-service
          image: image-registry.openshift-image-registry.svc.cluster.local:5000/right-lyrics/songs-service:1.2
