songs-service/k8s/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songs-service-v-1-3
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: songs-service
          resources:
            limits:
              memory: 256Mi
              cpu: 300m
            requests:
              memory: 256Mi
              cpu: 300m
