songs-service/k8s/overlays/prod/songs-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: songs
spec:
  host: songs
  subsets:
  - name: 1-2
    labels:
      version: "1.2"
  - name: 1-3
    labels:
      version: "1.3"
